# serde_practice

./: Cargo.toml  request.json
src/: main.rs
